<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="text_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="arrow_back">arrow_back</string>
    <string name="media_screen">Media screen</string>
    <string name="android_practicum_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="target_email">zinchencko.alexei2018@yandex.ru</string>
    <string name="subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="text_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="text_email_app">Выберите приложение для отправления письма</string>
    <string name="text_no_email_app">На устройстве не обнаружено ни одного почтового клиента</string>
    <string name="practicum_offer_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="artwork_url_100">url</string>
    <string name="track_name">Название композиции</string>
    <string name="artist_name">Имя исполнителя</string>
    <string name="track_time">Продолжительность</string>
    <string name="refresh">Обновить</string>
    <string name="check_connection">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="search_history_title">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="album">Альбом</string>
    <string name="current_time">00:00</string>
    <string name="player_in_progress">Трек в процессе загрузки</string>
    <string name="empty_favorite_list">Ваша медиатека пуста</string>
    <string name="no_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="title">Название *</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="covers">covers</string>
    <string name="dialog_question">Завершить создание плейлиста?</string>
    <string name="dialog_question_edit_playlist">Завершить изменение плейлиста?</string>
    <string name="losing_data">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="done">Завершить</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="added_to_playlist">Добавлено в плейлист %s</string>
    <string name="track_exist_in_playlist">Трек уже добавлен в плейлист %s</string>
    <string name="playlist_created">Плейлист %s создан</string>
    <string name="playlist_edited">Плейлист %s изменён</string>
    <string name="empty_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="empty_playlist_toast">Список треков пуст</string>
    <string name="share">Поделиться</string>
    <string name="add_tracks">Добавить треки</string>
    <string name="edit_playlist">Редактировать плейлист</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="confirming_deletion_track">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="confirming_deletion_playlist">Вы уверены, что хотите удалить плейлист «%s»?</string>
    <string name="delete">Удалить</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="playlist_title_description">%1$s %2$s</string>
    <string name="no_permission">Отсутствует разрешение на уведомления. Предоставьте соответствующее разрешения в настройках</string>

</resources>