<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ActivitiesBackgroundStyle"
    android:paddingHorizontal="@dimen/dimen_16dp"
    android:paddingTop="@dimen/dimen_16dp"
    tools:context="com.example.playlistmaker.ui.settings.fragment.SettingsFragment">

    <LinearLayout
        android:id="@+id/ll_arrow_back"
        style="@style/ActivityHeaderStyle"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <TextView
            style="@style/SettingsHeaderTextStyle"
            android:text="@string/settings"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        style="@style/SettingsOptionContainer"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:paddingVertical="@dimen/dimen_20dp"
        tools:ignore="UseCompoundDrawables">

        <TextView
            style="@style/SettingsTitle"
            android:layout_weight="1"
            android:text="@string/dark_theme" />

        <com.bitvale.switcher.SwitcherX
            android:id="@+id/themeSwitcher"
            style="@style/SettingsThemeSwitcher"
            android:contentDescription="@string/app_name"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/share_app"
        style="@style/SettingsOptionContainer"
        android:paddingVertical="@dimen/dimen_20dp"
        tools:ignore="UseCompoundDrawables">

        <TextView
            style="@style/SettingsTitle"
            android:layout_weight="1"
            android:text="@string/share_app" />

        <ImageView
            style="@style/SettingsIcon"
            android:src="@drawable/share"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/text_to_support"
        style="@style/SettingsOptionContainer"
        android:paddingVertical="@dimen/dimen_20dp"
        tools:ignore="UseCompoundDrawables">

        <TextView
            style="@style/SettingsTitle"
            android:layout_weight="1"
            android:text="@string/text_to_support" />

        <ImageView
            style="@style/SettingsIcon"
            android:src="@drawable/support"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_agreement"
        style="@style/SettingsOptionContainer"
        android:paddingVertical="@dimen/dimen_20dp"
        tools:ignore="UseCompoundDrawables">

        <TextView
            style="@style/SettingsTitle"
            android:layout_weight="1"
            android:text="@string/user_agreement" />

        <ImageView
            style="@style/SettingsIcon"
            android:src="@drawable/arrow_forward"
            tools:ignore="ContentDescription" />
    </LinearLayout>

</LinearLayout>
