<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.media.fragment.PlaylistsFragment">

    <Button
        android:id="@+id/add_playlist_btn"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:text="@string/new_playlist" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dimen_16dp"
        tools:listitem="@layout/item_playlist_grid"
        tools:itemCount="4"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/iv_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_48dp"
        android:layout_marginBottom="@dimen/dimen_16dp"
        android:contentDescription="@string/media"
        android:src="@drawable/empty_list_img" />

    <TextView
        android:id="@+id/tv_placeholder_message"
        style="@style/StylePlaceholderStatusMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dimen_24dp"
        android:text="@string/no_playlists"
        android:textAlignment="center" />

    <FrameLayout
        android:id="@+id/snackbar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" />
</LinearLayout>