<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables"
        >
        <ImageView
            android:id="@+id/arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back"
            android:paddingEnd="@dimen/icon_padding"
            android:paddingTop="@dimen/layouts_padding_top"
            android:foreground="?attr/selectableItemBackground"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/arrow_back"
            tools:ignore="RtlSymmetry"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:paddingTop="@dimen/layouts_padding_top"
            android:textSize="@dimen/main_text_size"
            android:textColor="@color/black_text"
            android:paddingStart="28dp"
            tools:ignore="RtlSymmetry"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="40dp"
        tools:ignore="UseCompoundDrawables"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme"
            android:paddingTop="@dimen/layouts_padding_top"
            android:textSize="@dimen/small_text"
            android:textColor="@color/black_text"
            android:layout_gravity="center_vertical"
            android:paddingBottom="14dp"
            />

        <Switch
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            tools:ignore="UseSwitchCompatOrMaterialXml"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="40dp"
        tools:ignore="UseCompoundDrawables"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/share_app"
            android:paddingTop="@dimen/layouts_padding_top"
            android:textSize="@dimen/small_text"
            android:textColor="@color/black_text"
            android:layout_gravity="center_vertical"
            android:paddingBottom="14dp"
            android:layout_marginStart="0dp"
            android:layout_weight="1"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:src="@drawable/share"
            android:contentDescription="@string/share_app"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="40dp"
        tools:ignore="UseCompoundDrawables"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_to_support"
            android:paddingTop="@dimen/layouts_padding_top"
            android:textSize="@dimen/small_text"
            android:textColor="@color/black_text"
            android:layout_gravity="center_vertical"
            android:paddingBottom="14dp"
            android:layout_marginStart="0dp"
            android:layout_weight="1"
            />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="0dp"
            android:src="@drawable/support"
            android:contentDescription="@string/text_to_support"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="40dp"
        tools:ignore="UseCompoundDrawables"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/user_agreement"
            android:paddingTop="@dimen/layouts_padding_top"
            android:textSize="@dimen/small_text"
            android:textColor="@color/black_text"
            android:layout_gravity="center_vertical"
            android:paddingBottom="14dp"
            android:layout_marginStart="0dp"
            android:layout_weight="2"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingEnd="10dp"
            android:src="@drawable/arrow_forward"
            tools:ignore="RtlSymmetry"
            android:contentDescription="@string/user_agreement"
            />
    </LinearLayout>

</LinearLayout>