<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/empty_poster" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dimen_8dp">

            <TextView
                style="@style/SettingsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/track_name" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/SearchTrackDataTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/artist_name" />

                <ImageView
                    style="@style/DotIconStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/dimen_4dp"
                    android:src="@drawable/ellipse" />

                <TextView
                    style="@style/SearchTrackDataTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/track_time" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            style="@style/SettingsIcon"
            android:src="@drawable/arrow_forward"
            android:paddingStart="@dimen/dimen_16dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>