<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ActivitiesBackgroundStyle"
    android:paddingTop="@dimen/dimen_16dp"
    tools:context=".ui.search.fragment.SearchFragment">

    <LinearLayout
        android:id="@+id/ll_arrow_back"
        style="@style/ActivityHeaderStyle"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:orientation="horizontal"
        tools:ignore="RtlHardcoded,UseCompoundDrawables">

        <TextView
            style="@style/SettingsHeaderTextStyle"
            android:text="@string/search"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/input_edit_text"
            style="@style/SearchEditextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_36dp"
            android:drawablePadding="@dimen/dimen_8dp"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="@dimen/dimen_36dp"
            android:singleLine="true"
            android:textColor="@color/black_text"
            tools:ignore="Autofill,RtlSymmetry,TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/search_icon"
            style="@style/SearchEditextIconStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_gravity="start"
            android:paddingStart="13dp"
            android:src="@drawable/search"
            tools:ignore="ContentDescription,ObsoleteLayoutParam,RtlSymmetry" />

        <ImageView
            android:id="@+id/iv_clear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:clickable="true"
            android:paddingEnd="@dimen/dimen_12dp"
            android:src="@drawable/ic_baseline_clear"
            android:visibility="gone"
            app:tint="@color/black_text"
            tools:ignore="ContentDescription,ObsoleteLayoutParam,RtlSymmetry" />
    </FrameLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/dimen_16dp"
        android:paddingTop="@dimen/dimen_24dp"
        android:paddingEnd="@dimen/dimen_24dp"
        tools:ignore="RtlSymmetry">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_tracklist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:visibility="gone"
            tools:itemCount="3"
            tools:listitem="@layout/item_track" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_88dp"
            android:indeterminateTint="@color/background_color"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/ll_placeholder_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_88dp"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/img_placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/dimen_16dp"
                android:contentDescription="@string/media"
                tools:src="@drawable/no_internet_img" />

            <TextView
                android:id="@+id/tv_placeholder_message"
                style="@style/StylePlaceholderStatusMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_24dp"
                android:textAlignment="center"
                tools:text="@string/app_name" />

            <Button
                android:id="@+id/btn_refresh"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/refresh" />
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/searchHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/history_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_24dp"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    style="@style/SettingsHeaderTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_20dp"
                    android:text="@string/search_history_title"
                    android:textAlignment="center"
                    android:textSize="19sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_history"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="@dimen/dimen_24dp"
                    android:layout_weight="1"
                    tools:itemCount="1"
                    tools:listitem="@layout/item_track" />

                <Button
                    android:id="@+id/btn_clear_history"
                    style="@style/ButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/clear_history" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
</LinearLayout>
