<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScreenBackGround"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.media.fragment.NewPlaylistFragment">

    <ImageView
        android:id="@+id/iv_arrow_back"
        style="@style/SettingsHeaderIconStyle"
        android:layout_marginTop="@dimen/dimen_4dp"
        android:contentDescription="@string/description"
        android:padding="@dimen/dimen_20dp"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_header_title"
        style="@style/SettingsHeaderTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_12dp"
        android:text="@string/new_playlist"
        app:layout_constraintStart_toEndOf="@+id/iv_arrow_back"
        app:layout_constraintTop_toTopOf="@+id/iv_arrow_back" />

    <ImageView
        android:id="@+id/iv_pl_cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:contentDescription="@string/description"
        android:src="@drawable/ic_component_ph"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/iv_arrow_back" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/dimen_24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/dimen_24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_text_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/dimen_16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_text_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/dimen_16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_title"
        style="@style/TextInputLayoutTextStyle"
        android:layout_marginTop="@dimen/dimen_32dp"
        android:hint="@string/title"
        app:boxBackgroundColor="@color/transparent"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="@dimen/dimen_8dp"
        app:boxCornerRadiusBottomStart="@dimen/dimen_8dp"
        app:boxCornerRadiusTopEnd="@dimen/dimen_8dp"
        app:boxCornerRadiusTopStart="@dimen/dimen_8dp"
        app:boxStrokeColor="@drawable/box_stroke_selector"
        app:boxStrokeWidth="1dp"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/blue_text"
        app:layout_constraintEnd_toStartOf="@id/right_text_guideline"
        app:layout_constraintStart_toEndOf="@id/left_text_guideline"
        app:layout_constraintTop_toBottomOf="@id/iv_pl_cover">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_title"
            style="@style/TextInputEditTextStyle"
            app:layout_constraintEnd_toEndOf="@id/right_text_guideline"
            app:layout_constraintStart_toStartOf="@id/left_text_guideline"
            app:layout_constraintTop_toBottomOf="@+id/iv_pl_cover" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_input"
        style="@style/TextInputLayoutTextStyle"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:hint="@string/description"
        app:boxBackgroundColor="@color/transparent"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="@dimen/dimen_8dp"
        app:boxCornerRadiusBottomStart="@dimen/dimen_8dp"
        app:boxCornerRadiusTopEnd="@dimen/dimen_8dp"
        app:boxCornerRadiusTopStart="@dimen/dimen_8dp"
        app:boxStrokeColor="@drawable/box_stroke_selector"
        app:boxStrokeWidth="1dp"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/blue_text"
        app:layout_constraintEnd_toStartOf="@id/right_text_guideline"
        app:layout_constraintStart_toEndOf="@id/left_text_guideline"
        app:layout_constraintTop_toBottomOf="@id/ti_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_description"
            style="@style/TextInputEditTextStyle"
            app:layout_constraintEnd_toEndOf="@id/right_text_guideline"
            app:layout_constraintStart_toStartOf="@id/left_text_guideline"
            app:layout_constraintTop_toBottomOf="@+id/iv_pl_cover" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_create_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_44dp"
        android:layout_marginBottom="@dimen/dimen_32dp"
        android:fontFamily="@font/ys_display_medium"
        app:cardCornerRadius="@dimen/dimen_8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/right_text_guideline"
        app:layout_constraintStart_toEndOf="@id/left_text_guideline"
        tools:backgroundTint="@color/text_gray">

        <TextView
            android:id="@+id/tv_btn_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center"
            android:text="@string/create"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_19sp" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>